--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -1,7 +1,9 @@
 .text-animate {
   display: inline-block;
   opacity: 0;
-  animation: bounceIn 1s 1s;
+  animation: bounceIn;
+  animation-duration: 1s;
+  animation-delay: 1s;
   animation-fill-mode: forwards;
   min-width: 10px;
 }
@@ -17,8 +19,8 @@
   }
 }
 
-@for $i from 1 to 35 {
+@for $i from 1 through 35 {
   .text-animate._#{$i} {
-    animation-delay: #{$i/10}s;
+    animation-delay: #{$i / 10}s;
   }
 }
