--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -10,38 +10,39 @@
 
   h1 {
     color: #fff;
-    font-size: 53px;
+    font-size: 56px;
+    line-height: 53px;
     margin: 0;
     font-family: 'Coolvetica';
     font-weight: 400;
 
-    &::before {
+    &:before {
       content: '<h1>';
-      font-family: 'La Belle Aurore';
+      font-family: 'La Belle Aurore', cursive;
       color: #ffd700;
       font-size: 18px;
       position: absolute;
       margin-top: -40px;
-      left: 15px;
+      left: -15px;
       opacity: 0.6;
     }
 
-    &::after {
-      content: '</h1>';
-      font-family: 'La Belle Aurore';
+    &:after {
+      content: '<h1/>';
+      font-family: 'La Belle Aurore', cursive;
       color: #ffd700;
       font-size: 18px;
       position: absolute;
-      opacity: 0.6;
-      margin-left: 28px;
       margin-top: 18px;
+      margin-left: 20px;
       animation: fadeIn 1s 1.7s backwards;
+      opacity: 0.6;
     }
 
     img {
-      width: 32px;
       margin-left: 20px;
       opacity: 0;
+      width: 32px;
       height: auto;
       animation: rotateIn 1s linear both;
       animation-delay: 1.4s;
@@ -54,6 +55,7 @@
     font-weight: 400;
     font-size: 11px;
     font-family: sans-serif;
+    letter-spacing: 3px;
     animation: fadeIn 1s 1.8s backwards;
   }
 
@@ -68,12 +70,55 @@
     border: 1px solid #ffd700;
     margin-top: 25px;
     float: left;
-    animation: fadeIn 1s 1.8s backwards;
+    animation: fadeInAnimation 1s 1.8s backwards;
     white-space: nowrap;
 
     &:hover {
       background: #ffd700;
       color: #333;
     }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .tags,
+  .home-page h1:before,
+  .home-page h1:after {
+    display: none;
+  }
+
+  .home-page .text-zone {
+    position: initial;
+    width: 100%;
+    transform: none;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+  .home-page .flat-button {
+    float: none;
+    display: block;
+    margin: 20px auto 0 auto;
+    width: 124px;
+  }
+
+  .logo-container {
+    position: relative;
+    width: 100px;
+    height: auto;
+    top: 50px;
+    right: 0;
+    box-sizing: border-box;
+    margin: auto;
+    left: 0;
+  }
+
+  .logo-container svg {
+    position: absolute;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: 0;
+    margin: auto;
   }
 }
