--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -63,25 +63,32 @@
         width: 100%;
         text-align: center;
         opacity: 0;
+        -webkit-transition: all 0.3s ease-out;
         transition: all 0.3s ease-out;
       }
 
       &:first-child {
-        &::after {
+        &:after {
           content: 'HOME';
         }
       }
     }
 
     a.about-link {
-      &::after {
+      &:after {
         content: 'ABOUT';
       }
     }
 
     a.contact-link {
-      &::after {
+      &:after {
         content: 'CONTACT';
+      }
+    }
+
+    a.portfolio-link {
+      &:after {
+        content: 'PORTFOLIO';
       }
     }
 
@@ -108,11 +115,73 @@
         display: block;
         font-size: 15px;
         line-height: 16px;
+        color: #4d4d4e;
+      }
 
-        &:hover svg {
+      &:hover {
+        .anchor-icon {
           color: #ffd700;
         }
       }
+    }
+  }
+}
+
+.hamburger-icon,
+.close-icon {
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .nav-bar {
+    background: transparent;
+    position: initial;
+    height: auto;
+    min-height: auto;
+
+    ul,
+    nav {
+      display: none;
+    }
+
+    nav {
+      width: 100%;
+      top: 0;
+      left: 0;
+      background: #181818;
+      height: 100%;
+      margin: 0;
+      z-index: 2;
+      position: fixed;
+
+      &.mobile-show {
+        display: block;
+      }
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      a:after {
+        opacity: 1;
+        position: initial;
+        width: auto;
+        margin-left: 10px;
+      }
+
+      a svg {
+        opacity: 1 !important;
+      }
+    }
+
+    .hamburger-icon,
+    .close-icon {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      display: block;
     }
   }
 }
