--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,25 @@
-html{
-font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 
 body {
   margin: 0;
-  margin: 0;
-  font: 300 11px/1.4 'Helvetica Neue', sans-serif,
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-    color: #444;
-    background: #022c43;
-    overflow: hidden;
-    display: block;
+  font: 300 11px/1.4 'Helvetica Neue', sans-serif;
+  color: #444;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #022c43;
+  overflow: hidden;
+  display: block;
+}
+
+.dashboard {
+  margin-top: 200px;
+  margin-left: 200px;
+}
+
+@media screen and (max-width: 1200px) {
+  body {
+    overflow: visible;
+  }
 }
