--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -150,6 +150,14 @@
         height: 200px;
         max-width: calc(50% - 10px);
         min-width: 31%;
+
+        .title {
+          display: flex;
+          flex-wrap: wrap;
+          font-size: 20px;
+          font-weight: bold;
+          line-height: 20px;
+        }
       }
     }
   }
